Adds award name to song show page and tests for them

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,3 +2,8 @@
 <p>By: <%= @song.artist.name %></p>
 <p>Play Count: <%= @song.play_count %>
 <p>Length: <%= @song.length %>
+
+<h1>Awards for this song</h1>
+<% @song.awards.each do |award| %>
+  <%= award.name %>
+<% end %>
